--- a/deploy/vote/deployment.yaml
+++ b/deploy/vote/deployment.yaml
@@ -18,6 +18,6 @@ spec:
         tier: front
     spec:
       containers:
-      - image: schoolofdevops/vote:v1
+      - image: schoolofdevops/vote:v1sdsdsds
         name: vote
         resources: {}
