--- a/deploy/redis/deployment.yaml
+++ b/deploy/redis/deployment.yaml
@@ -16,6 +16,6 @@ spec:
         app: redis
     spec:
       containers:
-      - image: redis/alpine
+      - image: redis:alpine
         name: redis
         resources: {}
