Added various kustomize options

--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -5,3 +5,21 @@ resources:
 patchesStrategicMerge:
 - deployment.yaml
 - service.yaml
+
+replicas:
+- name: vote
+  count: 7
+
+images:
+- name: schoolofdevops/vote
+  newTag: v4
+  newName: lfs269/vote
+
+namespace: instavote
+
+commonLabels:
+  project: instavote
+  env: staging
+
+commonAnnotations:
+  supported-by: "sre@example.com"
