--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -22,3 +22,7 @@ commonLabels:
 
 commonAnnotations:
   supported-by: "sre@example.com"
+
+configMapGenerator:
+- name: vote-options
+  env: options.env
