--- a/deploy/worker/staging/kustomization.yaml
+++ b/deploy/worker/staging/kustomization.yaml
@@ -2,11 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
-patchesStrategicMerge:
-- deployment.yaml
 
 replicas:
-- name: vote
+- name: worker
   count: 1
 
 images:
