Updated the image repository
Updated the image repository to sanjaypsachdev

--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -9,7 +9,7 @@ replicas:
 - name: vote
   count: 7
 images:
-- name: schoolofdevops/vote
+- name: sanjaypsachdev/vote
   newTag: main-bfb412c8-1669767331 # {"$imagepolicy": "flux-system:vote:tag"}
 namespace: instavote
 commonLabels:
