--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -9,7 +9,8 @@ replicas:
 - name: vote
   count: 7
 images:
-- name: sanjaypsachdev/vote
+- name: schoolofdevops/vote
+  newName: sanjaypsachdev/vote
   newTag: main-bfb412c8-1669767331 # {"$imagepolicy": "flux-system:vote:tag"}
 namespace: instavote
 commonLabels:
